syntax = "proto3";

package proto;

option go_package = "notification-sender/proto;proto";

service NotificationService {
  rpc SendCreateNotification (CreateNotificationRequest) returns (CreateNotificationResponse);
  rpc SendUpdateNotification (UpdateNotificationRequest) returns (UpdateNotificationResponse);
}

message CreateNotificationRequest {
  int32 user_id = 1;
  int32 request_id = 2; // Идентификатор запроса, для которого создается уведомление
}

message CreateNotificationResponse {
  bool success = 1;
}

message UpdateNotificationRequest {
  int32 user_id = 1;
  int32 request_id = 2; // Добавлено для запроса последних статусов
}

message UpdateNotificationResponse {
  bool success = 1;
}
